--- a/StopBy/app/src/main/res/layout/activity_login.xml
+++ b/StopBy/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.squad.stopby.LoginActivity">
+    tools:context="com.squad.stopby.LoginActivity"
+    tools:layout_editor_absoluteY="25dp">
 
     <EditText
         android:id="@+id/login_email"
@@ -67,4 +68,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="157dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginStart="137dp"
+        android:layout_marginTop="13dp"
+        android:text="@string/forgot_password"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 </android.support.constraint.ConstraintLayout>
